<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_setting1"
        android:title="setting1" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_setting2"
        android:title="setting2" />

    <ListPreference
        android:defaultValue="red"
        android:entries="@array/color_option_labels"
        android:entryValues="@array/color_option_labels"
        android:key="@string/key_text_color"
        android:title="Shape Color"/>

    <EditTextPreference
        android:defaultValue="@string/text_size_default"
        android:key="@string/key_text_size"
        android:title="Text Size" />
</PreferenceScreen>